--- a/index.html
+++ b/index.html
@@ -5,16 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="kaung khant zaw">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css">
+    <link rel="shortcut icon" href="IMG.jpg"/>
     <title>Kaung Khant Zaw's Profile</title>
     <style>
-        .about{
+        h1{
             padding:10px;
+        }
+        body{
+            font-size:22px;
         }
     </style>
 </head>
 <body>
-    <div class="about">
-        <h1>Kaung Khant Zaw (kottsin)</h1>
+
+    <div class="head">
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="download.html">Sharing</a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="container">
+        <div class="row about">
+            <h1>About</h1>
+                <span>&#10218; Name : <i>Kaung Khant Zaw (k0ttsin) </i> &#10218;</span><br>
+                <span>&#10218; Phone : <i>+959401470547 </i>&#10218;</span><br>
+                <span>&#10218; Email : <i>kaungkaung.kkzx@gmail.com </i>&#10218;</span>
+                <span>&#10218; Address : <i>Magway, Magway Region, Myanmar </i>&#10218;</span><br>
+                <span>&#10218; Github : <i><a href="https://github.com/k0ttsin">k0ttsin </a></i>&#10218;</span><br>
+                <span>&#10218; Youtube : <i><a href="https://youtube.com/c/KaungKhantZaw">Kaung Khant Zaw </a></i>&#10218;</span><br>
+                <span>&#10218; Facebook : <i><a href="facebook.com/i.love.ma.ma.somuch">Khant Min Htet </a></i>&#10218;</span>
+        </div>
+        <hr style="height:3px;">
+        <div class="row education">
+            <h1>Education</h1>
+                <span>&#9666; 1<sup>st</sup> Year : Bachelor of Medicine and Bachelor of Surgery (University of Medicine, Magway) </span><br>
+            <h1>Certifications</h1>
+                <span>&#9656; CNSS - Certified Network Security Specialist</span><br>
+                <span>&#9656; DEHC - Diploma in Ethical Hacking and Cybersecurity (YMax University) </span><br>
+        </div>
+        <hr style="height:3px;">
+        <div class="row experience">
+            <h1>Experience</h1>
+                <h4>Freelance Service Technician At i-tech (2019)</h4>
+                <span>&#9666; Computer Repair Service </span><br><br>
+                <h4>Launch Mitharsu.org Website</h4>
+                <span>&#9666; Work as junior developer</span>
+                <span>&#9666; Design the web interface</span>
+                <span>&#9666; Configure Wordpress For Security</span><br><br>
+                <h4>Instructor and Co-Founder at FITI </h4>
+                <span>&#9666; Knowledge Sharing About Linux Foundation with Other Technological Universities</span>
+                <span>&#9666; Teach Ethical Hacking Class</span>
+                <span>&#9666; Manage Courses with </span>
+        </div>
+    </div>
+    <hr>
+    <div class="footer">
+        <center>Contact Me : </center>
     </div>
 </body>
 </html>
