--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h4>Instructor and Co-Founder at FITI </h4>
                 <span>&#9666; Knowledge Sharing About Linux Foundation with Other Technological Universities</span>
                 <span>&#9666; Teach Ethical Hacking Class</span>
-                <span>&#9666; Manage Courses with </span>
+                <span>&#9666; Manage Courses with other mentors </span>
         </div>
     </div>
     <hr>
