--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="head">
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="download.html">Sharing</a>
