--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>About</h1>
                 <span>&#10218; Name : <i>Kaung Khant Zaw (k0ttsin) </i> &#10218;</span><br>
                 <span>&#10218; Phone : <i>+959401470547 </i>&#10218;</span><br>
-                <span>&#10218; Email : <i>kaungkaung.kkzx@gmail.com </i>&#10218;</span>
+                <span>&#10218; Email : <i>k0ttsin@protonmail.com </i>&#10218;</span>
                 <span>&#10218; Address : <i>Magway, Magway Region, Myanmar </i>&#10218;</span><br>
                 <span>&#10218; Github : <i><a href="https://github.com/k0ttsin">k0ttsin </a></i>&#10218;</span><br>
                 <span>&#10218; Youtube : <i><a href="https://youtube.com/c/KaungKhantZaw">Kaung Khant Zaw </a></i>&#10218;</span><br>
