--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         body{
             font-size:22px;
         }
+        .footer{
+            padding:10px;
+        }
     </style>
 </head>
 <body>
@@ -67,7 +70,11 @@
     </div>
     <hr>
     <div class="footer">
-        <center>Contact Me : </center>
+        <center>Contact Me { 
+            <a href="https://www.facebook.com/i.love.ma.ma.somuch/"><i class="bi bi-facebook"></i></a> 
+            <a href="mailto:k0ttsin@protonmail.com"><i class="bi bi-envelope-fill"></i></a>
+            }
+        </center>
     </div>
 </body>
 </html>
