--- a/index.html
+++ b/index.html
@@ -70,10 +70,13 @@
     </div>
     <hr>
     <div class="footer">
-        <center>Contact Me { 
+        <center>
+            <footer class="fixed-bottom" style="background-color:black">
+                Contact Me { 
             <a href="https://www.facebook.com/i.love.ma.ma.somuch/"><i class="bi bi-facebook"></i></a> 
             <a href="mailto:k0ttsin@protonmail.com"><i class="bi bi-envelope-fill"></i></a>
             }
+            </footer>
         </center>
     </div>
 </body>
