--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
     <div class="head">
-        <ul class="nav justify-content-center">
+        <ul class="nav justify-content-center nav-tabs">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
