--- a/download.html
+++ b/download.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="kaung khant zaw">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css">
-    <link rel="shortcut icon" href="https://user-images.githubusercontent.com/66734606/137436841-44e46cf7-bf15-4248-92cf-a0af8d1f1879.jpg"/>
+    <link rel="shortcut icon" href="IMG.jpg"/>
     <title>Kaung Khant Zaw's Shared Resources</title>
     <style>
         h1{
@@ -21,15 +21,37 @@
 <body>
 
     <div class="head">
-        <ul class="nav justify-content-center">
+        <ul class="nav justify-content-center nav-tabs">
             <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="download.html">Sharing</a>
             </li>
         </ul>
     </div>
+    
+    <div class="container">
+        <h1>My Ebooks and Courses (Knowledge Sharing)</h1>
+        <div class="row">
+            <span>&#9642; Linux Privilege Escalation and OS Hardening (Video) - <a href="https://usersdrive.com/u5i5lpa6tvnn.html">Download</a></span><br>
+            <span>&#9642; 802.11 Python (Ebook) - <a href="https://www.mediafire.com/file/xsi4pr9q5a4odz3/802.11_Python.pdf/file">Download</a>(<a href="https://github.com/k0ttsin/802.11-Python">Sample Scripts</a>)</span><br>
+            <span>&#9642; Learning NMAP (Ebook) - <a href="https://www.mediafire.com/file/pqczqzoql91aom0/Learning_NMAP.pdf/file">Download</a></a></span><br>
+            <span>&#9642; NCat (Ebook) - <a href="https://www.mediafire.com/file/p6hca1hmi856u14/NCat.pdf/file">Download</a></span><br>
+            <span>&#9642; XPath Injection - <a href="https://www.mediafire.com/file/xw64wmebis9wvh2/XPathInjection.pdf/file">Download</a></span><br>
+        </div>
 
+    </div>
+    <div class="footer">
+        <center>
+            <footer class="fixed-bottom" style="height:40px;background-color:black">
+                Channels { 
+            <a href="https://t.me/kc_kc223/"><i class="bi bi-telegram"></i></a> 
+            <a href="https://www.youtube.com/c/KaungKhantZaw"><i class="bi bi-youtube"></i></a>
+            <a href="https://www.facebook.com/knowledgecc/"><i class="bi bi-facebook"></i></a>
+            }
+            </footer>
+        </center>
+    </div>
 </body>
 </html>
