--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <hr>
     <div class="footer">
         <center>
-            <footer class="fixed-bottom" style="height:40px;background-color:black">
+            <footer class="fixed-bottom" style="height:40px;background-color:white">
                 Contact Me { 
             <a href="https://www.facebook.com/i.love.ma.ma.somuch/"><i class="bi bi-facebook"></i></a> 
             <a href="mailto:k0ttsin@protonmail.com"><i class="bi bi-envelope-fill"></i></a>
