--- a/download.html
+++ b/download.html
@@ -44,7 +44,7 @@
     </div>
     <div class="footer">
         <center>
-            <footer class="fixed-bottom" style="height:40px;background-color:black">
+            <footer class="fixed-bottom" style="height:40px;background-color:white">
                 Channels { 
             <a href="https://t.me/kc_kc223/"><i class="bi bi-telegram"></i></a> 
             <a href="https://www.youtube.com/c/KaungKhantZaw"><i class="bi bi-youtube"></i></a>
