--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         body{
             font-size:22px;
         }
+        .head{
+            padding:30px;
+        }
         .footer{
             padding:10px;
         }
@@ -24,7 +27,7 @@
 <body>
 
     <div class="head">
-        <ul class="nav justify-content-center nav-tabs">
+        <ul class="nav justify-content-center nav-tabs" style="background-color:white">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
