--- a/download.html
+++ b/download.html
@@ -16,12 +16,18 @@
         body{
             font-size:22px;
         }
+        .head{
+            padding:30px;
+        }
+        .footer{
+            padding:10px;
+        }
     </style>
 </head>
 <body>
 
     <div class="head">
-        <ul class="nav justify-content-center nav-tabs">
+        <ul class="nav justify-content-center nav-tabs" style="background-color:white">
             <li class="nav-item">
                 <a class="nav-link" href="index.html">Home</a>
             </li>
