--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
     <div class="head">
-        <ul class="nav justify-content-center nav-tabs" style="background-color:white">
+        <ul class="nav justify-content-center nav-tabs fixed-top" style="background-color:white">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
