--- a/download.html
+++ b/download.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="kaung khant zaw">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css">
-    <link rel="shortcut icon" href="IMG.jpg"/>
+    <link rel="shortcut icon" href="https://user-images.githubusercontent.com/66734606/137436841-44e46cf7-bf15-4248-92cf-a0af8d1f1879.jpg"/>
     <title>Kaung Khant Zaw's Shared Resources</title>
     <style>
         h1{
