--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                 <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D150085806646367%26id%3D105821171072831&show_text=true&width=500" width="500" height="800" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                 <span>&#9666; Teach Ethical Hacking Class</span>
                 <span>&#9666; Manage Courses with other mentors </span>
+                <h4>Other</h4>
+                <span>&#9666; Freelance Service Technician</span>
+                <span>&#9666; Teach Computer Basic Class at <a href="https://www.facebook.com/instituteofdhammaeducationcenter">IDEC</a>(2019)</span>
         </div>
     </div>
     <hr>
