--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <span>&#9666; Manage Courses with other mentors </span><br><br>
                 <h4>Other</h4>
                 <span>&#9666; Freelance Service Technician</span>
-                <span>&#9666; Teach Computer Basic Class at <a href="https://www.facebook.com/instituteofdhammaeducationcenter">IDEC</a>(2019)</span>
+                <span>&#9666; Taught Computer Basic Class at <a href="https://www.facebook.com/instituteofdhammaeducationcenter">IDEC</a>(2019)</span>
         </div>
     </div>
     <hr>
