--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <hr style="height:3px;">
         <div class="row education">
             <h1>Education</h1>
-                <span>&#9666; 1<sup>st</sup> Year : Bachelor of Medicine and Bachelor of Surgery (University of Medicine, Magway) </span><br>
+                <span>&#9666; Foundation Year : Bachelor of Medicine and Bachelor of Surgery (University of Medicine, Magway) </span><br>
             <h1>Certifications</h1>
                 <span>&#9656; CNSS - Certified Network Security Specialist</span><br>
                 <span>&#9656; DEHC - Diploma in Ethical Hacking and Cybersecurity (YMax University) </span><br>
