--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="container">
         <div class="row about">
-            <h1>About</h1>
+            <h1>About Me</h1>
                 <span>&#10218; Name : <i>Kaung Khant Zaw (k0ttsin) </i> &#10218;</span><br>
                 <span>&#10218; Phone : <i>+959401470547 </i>&#10218;</span><br>
                 <span>&#10218; Email : <i>k0ttsin@protonmail.com </i>&#10218;</span>
