--- a/download.html
+++ b/download.html
@@ -21,7 +21,7 @@
         }
         .darkmode{
             background-color:black;
-            color:green;
+            color:white;
         }
         .head{
             padding:30px;
@@ -118,7 +118,7 @@
     </div>
     <div class="footer">
         <center>
-            <footer class="fixed-bottom" style="height:40px;background-color:white">
+            <footer class="fixed-bottom" style="height:40px;background-color:white;color:black;">
                 Channels { 
             <a href="https://t.me/kc_kc223/"><i class="bi bi-telegram"></i></a> 
             <a href="https://www.youtube.com/c/KaungKhantZaw"><i class="bi bi-youtube"></i></a>
