--- a/download.html
+++ b/download.html
@@ -30,6 +30,7 @@
             padding:20px;
         }
         .switch {
+            padding:5px;
             position: relative;
             display: inline-block;
             width: 50px;
