--- a/download.html
+++ b/download.html
@@ -21,7 +21,7 @@
         }
         .darkmode{
             background-color:black;
-            color:white;
+            color:green;
         }
         .head{
             padding:30px;
@@ -30,7 +30,6 @@
             padding:20px;
         }
         .switch {
-            padding:5px;
             position: relative;
             display: inline-block;
             width: 50px;
