--- a/download.html
+++ b/download.html
@@ -21,7 +21,7 @@
         }
         .darkmode{
             background-color:black;
-            color:green;
+            color:white;
         }
         .head{
             padding:30px;
