--- a/download.html
+++ b/download.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="https://user-images.githubusercontent.com/66734606/137436841-44e46cf7-bf15-4248-92cf-a0af8d1f1879.jpg"/>
-    <title>Kaung Khant Zaw's Shared Resources</title>
+    <title>Kaung Khant Zaw's Profile</title>
     <style>
         h1{
             padding:10px;
@@ -107,16 +107,17 @@
     
     <div class="container">
         <h1>My Ebooks and Courses (Knowledge Sharing)</h1>
-        <label class="switch">
-                <input type="checkbox" onclick="Dark()">
-                <span class="slider round"></span>
-            </label>
-            <script>
-                function Dark(){
-                    var element= document.body;
-                    element.classList.toggle("darkmode");
+                <label class="switch">
+                    <input type="checkbox" onclick="Dark()">
+                    <span class="slider round"></span>
+                </label>
+                <script>
+                    function Dark(){
+                        var element= document.body;
+                        element.classList.toggle("darkmode");
                 }
-            </script>
+                </script>
+                <br>
         <div class="row">
             <span>&#9642; Linux Privilege Escalation and OS Hardening (Video) - <a href="https://usersdrive.com/u5i5lpa6tvnn.html">Download</a></span><br>
             <span>&#9642; 802.11 Python (Ebook) - <a href="https://www.mediafire.com/file/xsi4pr9q5a4odz3/802.11_Python.pdf/file">Download</a>(<a href="https://github.com/k0ttsin/802.11-Python">Sample Scripts</a>)</span><br>
@@ -129,10 +130,9 @@
     <div class="footer">
         <center>
             <footer class="fixed-bottom" style="height:30px;background-color:white;color:black;">
-                Channels { 
-            <a href="https://t.me/kc_kc223/"><i class="bi bi-telegram"></i></a> 
-            <a href="https://www.youtube.com/c/KaungKhantZaw"><i class="bi bi-youtube"></i></a>
-            <a href="https://www.facebook.com/knowledgecc/"><i class="bi bi-facebook"></i></a>
+                Contact Me { 
+            <a href="https://www.facebook.com/i.love.ma.ma.somuch/"><i class="bi bi-facebook"></i></a> 
+            <a href="mailto:k0ttsin@protonmail.com"><i class="bi bi-envelope-fill"></i></a>
             }
             
             </footer>
