--- a/download.html
+++ b/download.html
@@ -14,6 +14,7 @@
             padding:10px;
         }
         body{
+            width:70%;
             height:80%;
             font-size:22px;
             background-color: white;
