--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <a href="https://www.facebook.com/i.love.ma.ma.somuch/"><i class="bi bi-facebook"></i></a> 
             <a href="mailto:k0ttsin@protonmail.com"><i class="bi bi-envelope-fill"></i></a>
             }
-            <a href="" onclick="Dark()"><i class="bi bi-moon-stars"></i></a>
+            <button onclick="Dark()"><i class="bi bi-moon-stars"></i></button>
             <script>
                     function Dark(){
                         var element= document.body;
