--- a/download.html
+++ b/download.html
@@ -29,67 +29,6 @@
         .footer{
             padding:20px;
         }
-        .switch {
-            position: relative;
-            display: inline-block;
-            width: 45px;
-            height: 25px;
-        }
-
-/* Hide default HTML checkbox */
-        .switch input {
-            opacity: 0;
-            width: 0;
-            height: 0;
-        }
-
-/* The slider */
-        .slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: #ccc;
-            -webkit-transition: .4s;
-            transition: .4s;
-        }
-
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 20px;
-            width: 20px;
-            left: 4px;
-            bottom: 4px;
-            background-color: white;
-            -webkit-transition: .4s;
-            transition: .4s;
-        }
-
-        input:checked + .slider {
-            background-color: #2196F3;
-        }
-
-        input:focus + .slider {
-            box-shadow: 0 0 1px #2196F3;
-        }
-
-        input:checked + .slider:before {
-            -webkit-transform: translateX(20px);
-            -ms-transform: translateX(20px);
-            transform: translateX(20px);
-        }
-
-/* Rounded sliders */
-        .slider.round {
-            border-radius: 34px;
-        }
-
-        .slider.round:before {
-            border-radius: 50%;
-        }
     </style>
 </head>
 <body>
@@ -124,16 +63,13 @@
             <a href="https://www.facebook.com/i.love.ma.ma.somuch/"><i class="bi bi-facebook"></i></a> 
             <a href="mailto:k0ttsin@protonmail.com"><i class="bi bi-envelope-fill"></i></a>
             }
-            <label class="switch">
-                    <input type="checkbox" onclick="Dark()">
-                    <span class="slider round"></span>
-                </label>
-                <script>
+            <span onclick="Dark()"><i class="bi bi-moon-stars"></i></span>
+            <script>
                     function Dark(){
                         var element= document.body;
                         element.classList.toggle("darkmode");
                 }
-                </script>
+            </script>
             </footer>
         </center>
     </div>
