--- a/download.html
+++ b/download.html
@@ -59,9 +59,10 @@
     <div class="footer">
         <center>
             <footer class="fixed-bottom" style="height:30px;background-color:white;color:black;">
-                Contact Me { 
-            <a href="https://www.facebook.com/i.love.ma.ma.somuch/"><i class="bi bi-facebook"></i></a> 
-            <a href="mailto:k0ttsin@protonmail.com"><i class="bi bi-envelope-fill"></i></a>
+                Channels { 
+            <a href="https://t.me/kc_kc223/"><i class="bi bi-telegram"></i></a> 
+            <a href="https://www.youtube.com/c/KaungKhantZaw"><i class="bi bi-youtube"></i></a>
+            <a href="https://www.facebook.com/knowledgecc/"><i class="bi bi-facebook"></i></a>
             }
             <span onclick="Dark()"><i class="bi bi-moon-stars"></i></span>
             <script>
