--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
         <div class="row education">
             <h1>Education</h1>
                 <span>&#9666; Foundation Year : Bachelor of Medicine and Bachelor of Surgery (University of Medicine, Magway) </span><br>
+                <span>&#9666; DEHC - Diploma in Ethical Hacking and Cybersecurity (YMax University) </span><br>
             <h1>Certifications</h1>
                 <span>&#9656; CNSS - Certified Network Security Specialist</span><br>
-                <span>&#9656; DEHC - Diploma in Ethical Hacking and Cybersecurity (YMax University) </span><br>
+                <span>&#9656; Zsecurity - Network Hacking Continued : Intermediate to Advanced</span><br>
+                <span>&#9656; Zsecurity - Learn Python & Ethical Hacking From Scratch</span><br>
+                <span>&#9656; Zsecurity - Learn Website Hacking From Scratch</span><br>
         </div>
         <hr style="height:3px;">
         <div class="row experience">
