--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             height:80%;
             font-size:22px;
             background-color: white;
-            color:black;
+            color:#333;
         }
         .darkmode{
-            background-color:black;
+            background-color:#696969;
             color:white;
         }
         .head{
