--- a/download.html
+++ b/download.html
@@ -20,7 +20,7 @@
             color:#333;
         }
         .darkmode{
-            background-color:#696969;
+            background-color:#1c1c1c;
             color:white;
         }
         .head{
