--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <span>&#10218; Address : <i>Magway, Magway Region, Myanmar </i>&#10218;</span><br>
                 <span>&#10218; Github : <i><a href="https://github.com/k0ttsin">k0ttsin </a></i>&#10218;</span><br>
                 <span>&#10218; Youtube : <i><a href="https://youtube.com/c/KaungKhantZaw">Kaung Khant Zaw </a></i>&#10218;</span><br>
-                <span>&#10218; Facebook : <i><a href="facebook.com/i.love.ma.ma.somuch">Khant Min Htet </a></i>&#10218;</span>
+                <span>&#10218; Facebook : <i><a href="https://facebook.com/i.love.ma.ma.somuch">Khant Min Htet </a></i>&#10218;</span>
         </div>
         <hr style="height:3px;">
         <div class="row education">
