--- a/download.html
+++ b/download.html
@@ -52,7 +52,7 @@
             <span>&#9642; 802.11 Python (Ebook) - <a href="https://www.mediafire.com/file/xsi4pr9q5a4odz3/802.11_Python.pdf/file">Download</a>(<a href="https://github.com/k0ttsin/802.11-Python">Sample Scripts</a>)</span><br>
             <span>&#9642; Learning NMAP (Ebook) - <a href="https://www.mediafire.com/file/pqczqzoql91aom0/Learning_NMAP.pdf/file">Download</a></a></span><br>
             <span>&#9642; NCat (Ebook) - <a href="https://www.mediafire.com/file/p6hca1hmi856u14/NCat.pdf/file">Download</a></span><br>
-            <span>&#9642; XPath Injection - <a href="https://www.mediafire.com/file/xw64wmebis9wvh2/XPathInjection.pdf/file">Download</a></span><br>
+            <span>&#9642; XPath Injection (Ebook) - <a href="https://www.mediafire.com/file/xw64wmebis9wvh2/XPathInjection.pdf/file">Download</a></span><br>
         </div>
 
     </div>
