--- a/download.html
+++ b/download.html
@@ -36,7 +36,7 @@
     <div class="head">
         <ul class="nav justify-content-center nav-tabs fixed-top" style="background-color:white">
             <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
+                <a class="nav-link" href="/resume.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="download.html">Sharing</a>
