--- a/bash_color_code.html
+++ b/bash_color_code.html
@@ -9,54 +9,54 @@
   
   <body>
     <p>
-      Foreground Color
+      <strong>Foreground Color</strong><br>
 
-1.      Default Color   - 39
-2.      Black           - 30
-3.      Red                 - 31
-4.      Green           - 32
-5.      Yellow          - 33
-6.      Blue            - 34
-7.      Magenta         - 35
-8.      Cyan            - 36
-9.      Light Gray      - 37
-10.     Dark Gray       - 90
-11.     Light Red       - 91
-12.     Light Green     - 92
-13.     Light Yellow    - 93
-14.     Light Blue      - 94
-15.     Light Magenta   - 95
-16.     Light Cyan      - 96
-17.     White           - 97
-
+1.      Default Color   - 39<br>
+2.      Black           - 30<br>
+3.      Red             - 31<br>
+4.      Green           - 32<br>
+5.      Yellow          - 33<br>
+6.      Blue            - 34<br>
+7.      Magenta         - 35<br>
+8.      Cyan            - 36<br>
+9.      Light Gray      - 37<br>
+10.     Dark Gray       - 90<br>
+11.     Light Red       - 91<br>
+12.     Light Green     - 92<br>
+13.     Light Yellow    - 93<br>
+14.     Light Blue      - 94<br>
+15.     Light Magenta   - 95<br>
+16.     Light Cyan      - 96<br>
+17.     White           - 97<br>
+<strong>
 Background Color
-
-1.      Default         - 49
-2.      Black           - 40
-3.      Red             - 41
-4.      Green           - 42
-5.      Yellow          - 43
-6.      Blue            - 44
-7.      Magenta         - 45
-8.      Cyan            - 46
-9.      Light Gray      - 47
-10.     Dark Gray       - 100
-11.     Light Red       - 101
-12.     Light Green     - 102
-13.     Light Yellow    - 103
-14.     Light Blue      - 104
-15.     Light Magenta   - 105
-16.     Light Cyan      - 106
-17.     White           - 107
-
+</strong>
+1.      Default         - 49<br>
+2.      Black           - 40<br>
+3.      Red             - 41<br>
+4.      Green           - 42<br>
+5.      Yellow          - 43<br>
+6.      Blue            - 44<br>
+7.      Magenta         - 45<br>
+8.      Cyan            - 46<br>
+9.      Light Gray      - 47<br>
+10.     Dark Gray       - 100<br>
+11.     Light Red       - 101<br>
+12.     Light Green     - 102<br>
+13.     Light Yellow    - 103<br>
+14.     Light Blue      - 104<br>
+15.     Light Magenta   - 105<br>
+16.     Light Cyan      - 106<br>
+17.     White           - 107<br>
+<strong>
 Set
-
-1.      Bold            - 1
-2.      Dim             - 2
-3.      Underlined      - 4
-4.      Blink           - 5
-5.      Reverse         - 7 (invert the foreground and background colors)
-6.      Hidden          - 8 (useful for passwords)
+</strong>
+1.      Bold            - 1<br>
+2.      Dim             - 2<br>
+3.      Underlined      - 4<br>
+4.      Blink           - 5<br>
+5.      Reverse         - 7 (invert the foreground and background colors)<br>
+6.      Hidden          - 8 (useful for passwords)<br>
     </p>
   </body>
 </html>
