--- a/bash_color_code.html
+++ b/bash_color_code.html
@@ -29,7 +29,7 @@
 16.     Light Cyan      - 96<br>
 17.     White           - 97<br>
 <strong>
-Background Color
+Background Color<br>
 </strong>
 1.      Default         - 49<br>
 2.      Black           - 40<br>
@@ -49,7 +49,7 @@ Background Color
 16.     Light Cyan      - 106<br>
 17.     White           - 107<br>
 <strong>
-Set
+Set<br>
 </strong>
 1.      Bold            - 1<br>
 2.      Dim             - 2<br>
