--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="container02" class="container default"><div class="wrapper"><div class="inner">
     <h1 id="text12">Hi, I&#39;m K0ttsin</h1>
     <p id="text02"><span>Feel Pain. Know Pain.</span><br/> <span>Accept the Pain.</span></p></div></div></div>
-    <div id="container01" class="style1 container columns"><div class="wrapper"><div class="inner"><div><p id="text05" class="style1">Kaung Khant Zaw</p></div><div><ul id="icons02" class="style1 icons"><li><a class="n01" href="https://www.instagram.com/_kvungthvntzvw_/"><svg><use xlink:href="#icon-910"></use></svg><span class="label">Instagram</span></a></li></ul></div></div></div></div>
+    <div id="container01" class="style1 container columns"><div class="wrapper"><div class="inner"><div><p id="text05" class="style1">Kaung Khant Zaw</p></div><div><ul id="icons02" class="style1 icons"><li><a class="n01" href="https://www.instagram.com/_thvnt_/"><svg><use xlink:href="#icon-910"></use></svg><span class="label">Instagram</span></a></li></ul></div></div></div></div>
     <div id="container03" class="style1 container columns"><div class="wrapper"><div class="inner"><div><p id="text06" class="style1">Kaung Khant Zaw</p></div><div><ul id="icons03" class="style1 icons"><li><a class="n01" href="https://www.facebook.com/i.love.ma.ma.somuch">
     <svg><use xlink:href="#icon-906"></use></svg><span class="label">Facebook</span></a></li></ul></div></div></div></div><div id="container06" class="style1 container columns"><div class="wrapper"><div class="inner"><div><p id="text04" class="style1">Khant Min Htet</p></div><div><ul id="icons01" class="style1 icons">
     <li><a class="n01" href="https://twitter.com/KAszon_Smith"><svg><use xlink:href="#icon-905"></use></svg><span class="label">Twitter</span></a></li>
