--- a/ebooks.html
+++ b/ebooks.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Ebooks</h1>
-    <p>Botany Practical<a href="https://github.com/k0ttsin/k0ttsin.github.io/raw/main/assets/School%20PDF/Botany%20Practical.pdf">Download</a></p>
-    <p>Zoo Practical <a href="https://github.com/k0ttsin/k0ttsin.github.io/raw/main/assets/School%20PDF/Zoo%20Practical.pdf">Download</a></p>
+    <p>Botany Practical : <a href="https://github.com/k0ttsin/k0ttsin.github.io/raw/main/assets/School%20PDF/Botany%20Practical.pdf">Download</a></p>
+    <p>Zoo Practical : <a href="https://github.com/k0ttsin/k0ttsin.github.io/raw/main/assets/School%20PDF/Zoo%20Practical.pdf">Download</a></p>
 </body>
 </html>
