--- a/ebooks.html
+++ b/ebooks.html
@@ -5,10 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ebooks</title>
+    <style>
+        a
+        {
+            border-style: solid;
+            border-width : 1px 1px 1px 1px;
+            text-decoration : none;
+            padding : 4px;
+            border-color : #000000
+        } 
+    </style>
 </head>
 <body>
     <h1>Ebooks</h1>
-    <p>Botany Practical : <a href="https://github.com/k0ttsin/k0ttsin.github.io/raw/main/assets/School%20PDF/Botany%20Practical.pdf">Download</a></p>
-    <p>Zoo Practical : <a href="https://github.com/k0ttsin/k0ttsin.github.io/raw/main/assets/School%20PDF/Zoo%20Practical.pdf">Download</a></p>
+    <table>
+        <tr>
+            <td><p>Botany Practical</p></td>
+            
+            <td> : <a href="https://github.com/k0ttsin/k0ttsin.github.io/raw/main/assets/School%20PDF/Botany%20Practical.pdf">Download</a></td>
+        </tr>
+        <tr>
+            <td><p>Zoo Practical</p></td>
+            <td> : <a href="https://github.com/k0ttsin/k0ttsin.github.io/raw/main/assets/School%20PDF/Zoo%20Practical.pdf">Download</a></td>
+        </tr>
+    </table>
 </body>
 </html>
