--- a/fresherwelcome.html
+++ b/fresherwelcome.html
@@ -3,6 +3,6 @@
     <title>Fresher Welcome (5/2022)</title>
   </head>
   <body>
-    <iframe src="https://forms.gle/EQpcfbBMBV3BwoYt6" title="Form Link"></iframe>
+    <iframe src="https://forms.gle/EQpcfbBMBV3BwoYt6" title="Form Link" width="100%" height="100%"></iframe>
   </body>
 </html>
